--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules/
+sdk/
 dist/
 nw-dist/
 npm-debug.log*
@@ -7,6 +8,7 @@ yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
+resources/static/
 selenium-debug.log
 .idea
 # Editor directories and files
